# ProyectoSED02-2025-Terraplanistas

./: .env  .gitignore  Cargo.toml  README.md  payload.bash  puntoEnv  run.sh
db/: cluster_reset.sh  createdb.sql  setup.sh  up.sql
src/: main.rs  routing_helpers.rs  threadpool.rs
src/client/: index.html
src/client/assets/css/: Kaushan Script.css  Kaushan_Script.css  Montserrat.css  multipleSelect.css  styles.min.css
src/client/assets/js/: multipleSelect.js
src/client/views/: index.html  main.html  signup.html  upsertbook.html
src/server/: mod.rs
src/server/controllers/: answer.rs  controllers__writing.rs  controllers_page.rs  controllers_role.rs  controllers_user.rs  controllers_writing.rs  mod.rs  pages_controller.rs  static_files_controller.rs
src/server/db/: db_connect.rs
src/server/errors/: mod.rs
src/server/errors/user_errors/: mod.rs  user_creation_error.rs  user_deletion_error.rs
src/server/errors/writing_errors/: mod.rs  writing_creation_error.rs  writing_fetching_error.rs
src/server/models/: mod.rs  models_comment.rs  models_role.rs  models_tag.rs  models_user.rs  models_writing.rs
src/server/repositories/: mod.rs  repositories_role.rs  repositories_user.rs  repositories_writing.rs
src/server/services/: mod.rs  services_role.rs  services_user.rs  services_writing.rs
