[package]
name = "ProyectoSED012025-Terraplanistas"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
postgres = "0.19.10"
postgres-types = { version = "0.2.10", features = ["derive", "with-uuid-1"] }
regex = "1.11.3"
uuid = { version = "1.18.1", features = ["v4"] }
